# obsidian-llm-wiki

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  AUDIT_2026-04-24.md  CHANGELOG.md  CODE_REVIEW.md  CODE_REVIEW_2026-04-22.md  CODE_REVIEW_2026-04-23.md  LICENSE  PRD.md  README.md  RELEASE.md  REWRITE_RFC.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml  tests.yml
docs/: README.md  scalability-roadmap.md
docs/architecture/: ARCHITECTURE.md
docs/audits/: AUDIT_2026-04-24.md  AUDIT_2026-04-27-late.md  AUDIT_2026-04-27.md
docs/plans/: 2026-07-13-knowledge-engine-hardening.md  2026-07-14-evidence-connectors-render-integrity.md
docs/product/: PRD.md
docs/release/: CHANGELOG.md  PATCH_NOTES.md  RELEASE.md
docs/reviews/: CODE_REVIEW_REPORT_2026-04-23.md
obsidian-plugin/: esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  tsconfig.json
obsidian-plugin/src/: cli-client.ts  main.ts  types.ts
obsidian-plugin/tests/: cli-client.test.ts
obsidian_llm_wiki/: __init__.py  config.py
obsidian_llm_wiki/adapters/: __init__.py  bundle_io.py  enrich.py  migrate.py  visualizer.py
obsidian_llm_wiki/cli/: __init__.py  _helpers.py  build.py  fix.py  health.py  ingest.py  ops.py  providers.py  query.py  setup.py  validate.py
obsidian_llm_wiki/core/: backups.py  cache.py  contradictions.py  evidence.py  lock.py  maintenance.py  metrics.py  models.py  operations.py  orphan.py  pipeline.py  review.py  schema.py  source_content.py  source_files.py  state.py  task_models.py
obsidian_llm_wiki/ingest/: alt_source.py  clippings.py  connectors.py  documents.py  http_headers.py  liteparse.py  podcast_index.py  provenance.py  proxy.py  sources.py  supadata_utils.py  transcript_resolver.py  url_safety.py  web.py
obsidian_llm_wiki/providers/: llm.py
obsidian_llm_wiki/query/: __init__.py  context.py  graph.py  profiles.py  retrieval.py  sessions.py
obsidian_llm_wiki/render/: bilingual.py  crossrefs.py  dataview.py  frontmatter.py  graph_export.py  log.py  obsidian.py  source_graph.py
obsidian_llm_wiki/synth/: dedupe.py  embedding.py  language.py  parser.py  prompts.py  quality.py
pipeline/: __init__.py  _common.py  _version.py  agent_bridge.py  bundle_io.py  candidates.py  cli.py  clippings.py  compile.py  compiler.py  config.py  deps.py  doctor.py  enrich.py  extract.py  fixtures.py  graph_doctor.py  hasher.py  indexgen.py  language.py  lint.py  llm_client.py  lock.py  log.py  markdown.py  metrics.py  migrate.py  migrations.py  models.py  models_v2.py  note_schema.py  obsidian_meta.py  okf_indexgen.py  okf_lint.py  okf_markdown.py  okf_models.py  okf_renderer.py  okf_resolver.py  okf_visualizer.py  orphan.py  (+18 more)
pipeline/cli/: __init__.py  __main__.py  _helpers.py  compile_cmd.py  ingest.py  manage.py  quality.py  review_cmd.py
pipeline/compile/: __init__.py  core.py  semantic.py  structural.py  watch.py
pipeline/create/: __init__.py  agent.py  orchestrator.py  prompts.py  templates.py  templates_v2.py  validate.py
pipeline/extractors/: __init__.py  _shared.py  podcast.py  twitter.py  web.py  youtube.py
pipeline/lint/: __init__.py  checks.py  fixes.py  models.py  runner.py
pipeline/llm/: providers.py
pipeline/mcp/: __init__.py  server.py
prompts/: batch-create.prompt  common-instructions.prompt  compile-pass.prompt  concept-structure.prompt  entry-structure.prompt  review-update.prompt
skills/: obsidian-ingest.md
templates/: Entry.md  MoC.md  log.md
tests/: conftest.py  test_adversarial_parsers.py  test_audit_hardening_2026_04_28.py  test_bundle_io.py  test_ci_contract.py  test_cli_commands.py  test_clippings.py  test_code_review_regressions_2026.py  test_compile.py  test_compile_semantic.py  test_config.py  test_coverage_gaps.py  test_create.py  test_edge_cases.py  test_enrich.py  test_extract.py  test_extract_integration.py  test_golden_pipeline.py  test_hasher.py  test_integration.py  test_integration_okf.py  test_lint.py  test_llm_client.py  test_llm_providers.py  test_lock.py  test_migrate.py  test_models.py  test_new_systems.py  test_note_schema.py  test_okf_indexgen.py  test_okf_lint.py  test_okf_markdown.py  test_okf_models.py  test_okf_renderer.py  test_okf_resolver.py  test_okf_visualizer.py  test_packaging_contract.py  test_plan.py  test_qmd.py  test_qmd_integration.py  (+15 more)
tests/integration/: test_liteparse_cli.py
tests/new/: test_backups.py  test_cache.py  test_catch_all_podcast.py  test_chunk_synthesis_retry.py  test_chunking_confidence_diagnostics.py  test_claim_evidence_fixes.py  test_clippings_enhanced.py  test_code_review_fixes.py  test_config_loading.py  test_connectors.py  test_contradictions.py  test_contradictions_lifecycle.py  test_dataview.py  test_dedupe.py  test_deep_search_fallback.py  test_deferred_fixes.py  test_documents.py  test_embedding.py  test_embedding_performance.py  test_evidence.py  test_extraction_provenance.py  (+70 more)
tests_new/: test_models.py
(+26 files in other folders)
