[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-llm-wiki"
version = "3.0.0"
description = "LLM-powered knowledge compiler for Obsidian vaults — links in, interlinked wiki out"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx[socks]>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "trafilatura>=1.12",
    "defusedxml>=0.7,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
]
youtube = [
    "yt-dlp>=2025.3,<2026",
    "youtube-transcript-api>=0.6,<1",
]
pdf = [
    "pymupdf>=1.24,<2",
]
liteparse = [
    "liteparse>=2.5.1,<3",
]
docx = [
    "python-docx>=1.1,<2",
]
podcast = [
    "faster-whisper>=1.0,<2",
]
all = [
    "yt-dlp>=2025.3,<2026",
    "youtube-transcript-api>=0.6,<1",
    "pymupdf>=1.24,<2",
    "liteparse>=2.5.1,<3",
    "python-docx>=1.1,<2",
    "faster-whisper>=1.0,<2",
]

[project.scripts]
olw = "obsidian_llm_wiki.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["obsidian_llm_wiki"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic usage requires typer.Option() as argument defaults.
"obsidian_llm_wiki/cli/*.py" = ["B008"]
# Schema string literals are intentionally long one-liners.
"obsidian_llm_wiki/synth/prompts.py" = ["E501"]
# Test files: long JSON/HTML fixtures and minor style deviations are acceptable.
"tests/new/test_golden_pipeline.py" = ["E501"]
"tests/new/test_parser.py" = ["E501"]
"tests/new/test_render.py" = ["F841"]
"tests/new/test_quality.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests/new"]
asyncio_mode = "auto"
markers = [
    "integration: exercises optional external CLI integrations",
]
